# bmx

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  Hardcore.sln  Hardcore.sln~  README.md  init.el
BG_renderer/: BG_renderer.h  CMakeLists.txt
Blender/: Dx.py  Dx.py~  H3D.py  H3D.py~
Bullet_platform/: Bullet_platform.cpp  Bullet_platform.h  Bullet_platform.vcxproj  Bullet_platform.vcxproj.filters  ReadMe.txt
Charon/: CMakeLists.txt  CMakeLists.txt~  Charon.cpp  Charon.h  File_system.cpp  File_systen.h  Shader.cpp  Shader.h  Windows_platform.cpp  Windows_platform.h  process_mars_terrain_for_runtime.cpp  process_mars_terrain_for_runtime.h  quantize_height_tiles_to_u16.cpp  quantize_height_tiles_to_u16.h
Cx/: CMakeLists.txt  Common.h  Cx.h  Hash.cpp  Hash.h  Utility.h
Debug/: Workshop_test.ilk
Dx/: Anim_biped.cpp  Anim_biped.h  BG_renderer.cpp  BG_renderer.h  BROWSE  Bounding.h  CMakeLists.txt  Collision.cpp  Collision.h  Data.cpp  Data.h  Dx.h  Dx.vcxproj  Dx.vcxproj.filters  GlobalTypes.h  Goby.cpp  Goby.h  Horde3D_platform.cpp  Horde3D_platform.h  IKSolver2d.cpp  IKSolver2d.h  Interface.cpp  Interface.h  MatFn.h  MathTypes.h  PhysicsSys.cpp  PhysicsSys.h  QuatFn.h  ReadMe.txt  Render.cpp  Render.h  Resource.cpp  Resource.h  Scene.cpp  Scene.h  Shapes.h  System.cpp  System.h  Terrain.cpp  Terrain.h  (+4 more)
FFM/: CMakeLists.txt  Common.h  EC_Math.cpp  EC_Math.cpp~  EC_Math.h  FE_Math.cpp  FE_Math.h  FE_Math.h~  FFM.h  Utility.h
HordeIntgrTest/: Cave_test.cpp  Cave_test.h  Hmnd_04.cpp  Hmnd_04.h  Horde3DIntegrationApp.cpp  Horde3DIntegrationApp.h  Horde3D_Log.html  HordeIntgrTest.rc  HordeIntgrTest.vcxproj  HordeIntgrTest.vcxproj.filters  Main.cpp  ReadMe.txt  Resource.h  TestCommon.h  TestRunState.cpp  TestRunState.h  Ungr_00.cpp  stdafx.cpp
Ma/: MathFns.h  MathTypes.h  VecFns.h  VecMath.cpp
Ma_/: CMakeLists.txt  MatrixFns.h  QuatFns.h  VecMath.h
OpenGL_system/: CMakeLists.txt  OpenGL_system.cpp  OpenGL_system.h  OpenGL_system.vcxproj  OpenGL_system.vcxproj.filters  ReadMe.txt
Rn/: CMakeLists.txt  Render.cpp  Render.h
Rn_/: CLoD_Terrain.cpp  CLoD_Terrain.h  Render.h
SDL2_platform/: CMakeLists.txt  ReadMe.txt  SDL2_platform.cpp  SDL2_platform.h  SDL2_platform.vcxproj  SDL2_platform.vcxproj.filters
SECzy/: CMakeLists.txt  secp256k1.cpp  secp256k1.h
Sy/: CMakeLists.txt  System.h  Task.cpp
Terrain_renderer/: CMakeLists.txt  Terrain_renderer.cpp  Terrain_renderer.h
Xp/: ReadMe.txt  Xp.cpp  Xp.h  Xp.vcxproj  Xp.vcxproj.filters
aframe/: BROWSE  CMakeLists.txt  af.h  binary_IO.cpp  binary_IO.h  common.cpp  common.h  connection.cpp  connection.h  hash.cpp  hash.h  shared_types.h  system.cpp  system.h  task.cpp  task.h  utility.cpp  utility.h
aframe/test/: test_util.cpp
bmx/: CMakeLists.txt  block.cpp  block.h  bloom_filter.cpp  bloom_filter.h  bmx.h  common.h  merkle_block.cpp  merkle_block.h  merkle_tree.cpp  network.cpp  network.h  network_envelope.cpp  network_message.cpp  network_node.cpp  op_fns.cpp  op_fns.h  opcode.h  script.h  script_eval.cpp  script_read.cpp  script_types.h  script_util.cpp  script_write.cpp  secp256k1.cpp  secp256k1.h  test_block.cpp  test_network.cpp  transaction.cpp  transaction.h  utility.cpp  utility.h
bmx/test/: test_bloom_filter.cpp  test_merkle.cpp  test_network.cpp
curv/: CMakeLists.txt  common.h  curv.h  op_fns.cpp  op_fns.h  opcode.h  script.cpp  script.h  script_read.cpp  script_types.h  secp256k1.cpp  secp256k1.h  transaction.cpp  transaction.h  utility.cpp
cx/: CMakeLists.txt  System.cpp  System.h  Task.h
ffm/: CMakeLists.txt  CMakeLists.txt~  common.h  ec_math.cpp  ec_math.h  fe_math.cpp  fe_math.h  ffm.h  shared_types.h  utility.h
gfxlife/: CMakeLists.txt  gfxlife.cpp  gfxlife.h  main.cpp  vkx00.cpp  vkx00.h
mtool/: CMakeLists.txt  CMakeLists.txt~  EC_Math.cpp  EC_Math.h  FE_Math.cpp  FE_Math.h  Utility.h  ch06_ex.cpp  ch07_ex.cpp  ch08_ex.cpp  ch09_ex.cpp  ch10_ex.cpp  ch11_ex.cpp  ch12_ex.cpp  ch13_ex.cpp  closet.cpp  mtool.cpp  mtool.h
notmine/: CMakeLists.txt  notmine.cpp  notmine.h  theabyss.cpp  theabyss.h
rum/: CMakeLists.txt  rum.cpp  rum.h  rum_msg.fbs
rum/test/: misc.cpp  node_talk.cpp
rumbum/: CMakeLists.txt  CMakeLists.txt~
secp256k1/: common.h  secp256k1.cpp  secp256k1.h
shader/: bg_shader.fp  bg_shader.vp  mars_terr.fp  mars_terr_fp.glsl  mars_terr_tc.glsl  mars_terr_te.glsl  mars_terr_vp.glsl
spux/: CMakeLists.txt  Runnable.cpp  Runnable.h  Shared.cpp  System.cpp  Task.h  spux.h
spux_/: Shared.h  System.h
spux_SDL2/: CMakeLists.txt  ReadMe.txt  spux_SDL2.cpp  spux_SDL2.h
test_Anim_integration/: ReadMe.txt  stdafx.cpp  test_Anim_integration.cpp  test_Anim_integration.vcxproj  test_Anim_integration.vcxproj.filters
test_Balls/: Balls.cpp  Balls.h  CMakeLists.txt
test_Balls/shader/: deferred_simple.fp
test_Cubes/: CMakeLists.txt  Cubes.cpp  Cubes.h
test_Cubes/shader/: bg_shader.vp  deferred_simple.vp
test_GL4_experiment/: CMakeLists.txt  ReadMe.txt  mars_terr.h  process_mars_terrain_for_runtime.cpp  quantize_height_tiles_to_u16.cpp  quantize_height_tiles_to_u16.h  stdafx.cpp  test_GL4_experiment.cpp  test_GL4_experiment.h  test_GL4_experiment.vcxproj  test_GL4_experiment.vcxproj.filters
test_IK_integration/: ReadMe.txt  stdafx.cpp  test_IK_integration.cpp  test_IK_integration.vcxproj  test_IK_integration.vcxproj.filters
test_Locomotion/: ReadMe.txt  stdafx.cpp  test_Locomotion.cpp  test_Locomotion.vcxproj  test_Locomotion.vcxproj.filters
test_Mars/: CMakeLists.txt  Mars.cpp  Mars.h
test_Mars/shader/: bg_hwtess.fp  bg_hwtess.tc  bg_hwtess.te  bg_hwtess.vp  bg_shader.fp
test_OpenGL_integration/: ReadMe.txt  Resource.h  stdafx.cpp  test_OpenGL_integration.cpp  test_OpenGL_integration.h  test_OpenGL_integration.rc  test_OpenGL_integration.vcxproj  test_OpenGL_integration.vcxproj.filters
test_SDL_integration/: ReadMe.txt  stdafx.cpp  test_SDL_integration.cpp  test_SDL_integration.vcxproj  test_SDL_integration.vcxproj.filters
test_Vulkan/: CMakeLists.txt  TestVulkan.cpp  TestVulkan.h
theabyss/: CMakeLists.txt  theabyss.cpp  theabyss.h
(+40 files in other folders)
