
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

project (SDL2_platform)



if (NOT DEFINED SDL2_PLATFORM_ENABLE_OPENGL_SUPPORT)
	option (SDL2_PLATFORM_ENABLE_OPENGL_SUPPORT "Include OpenGL support" OFF)
endif ()



if (DEFINED SDL2_PLATFORM_ENABLE_OPENGL_SUPPORT)

	if (SDL2_PLATFORM_ENABLE_OPENGL_SUPPORT EQUAL ON)
		add_definitions (-DSDL2_PLATFORM_ENABLE_OPENGL)
	endif ()

endif ()

set (SDL2_PLATFORM_HEADER_FILES
	SDL2_platform.cpp
	)
	
	
set (SDL2_PLATFORM_SOURCE_FILES
	SDL2_platform.h
	)

add_library (SDL2_platform
	${SDL2_PLATFORM_HEADER_FILES}
	${SDL2_PLATFORM_SOURCE_FILES}
	)







