
CMAKE_MINIMUM_REQUIRED(VERSION 3.1)


SET (PROG_NAME spux_SDL2)
project (${PROG_NAME})


if (NOT DEFINED SPUX_SDL2_ENABLE_OPENGL_SUPPORT)
	option (SDL2_SPUX_ENABLE_OPENGL_SUPPORT "Include OpenGL support" OFF)
endif ()

if (NOT DEFINED SPUX_SDL2_ENABLE_VULKAN_SUPPORT)
	option (SPUX_SDL2_ENABLE_VULKAN_SUPPORT "Include Vulkan support" ON)
endif ()

if (DEFINED SPUX_SDL2_ENABLE_OPENGL_SUPPORT)

	if (SPUX_SDL2_ENABLE_OPENGL_SUPPORT EQUAL ON)
		add_definitions (-DSPUX_SDL2_OPENGL_ENABLED)
	endif ()

endif ()

if (DEFINED SPUX_SDL2_ENABLE_VULKAN_SUPPORT)

	if (SPUX_SDL2_ENABLE_VULKAN_SUPPORT EQUAL ON)
		add_definitions (-DSPUX_SDL2_VULKAN_ENABLED)
	endif ()

endif()



set (SPUX_SDL2_HEADER_FILES 
    spux_SDL2.h
    )
	
set (SPUX_SDL2_SOURCE_FILES  
    spux_SDL2.cpp
    )


add_library (${PROG_NAME}

	${SPUX_SDL2_HEADER_FILES}
	${SPUX_SDL2_SOURCE_FILES}
	)






target_include_directories (

  ${PROG_NAME}

  PUBLIC

    $ENV{GLM_ROOT}
    $ENV{SDL2_SDK_ROOT}/include
    $ENV{SPUX_ROOT}
)
